--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -1,7 +1,7 @@
 <section class="fadeIn dashboard goals">
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" click-redirect="/retirementGoalsStarted">
 				<div class="goals-cover">
 						<div class="image-div">
 							<img src="assets/images/retirement.png">
