--- a/less/swiper.less
+++ b/less/swiper.less
@@ -76,10 +76,42 @@
         }
         p{
           .GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
-          font-size:16px;  
+          .PIXEL2EM(16);
           text-align:right;     
         }
       }  
+      &.retirement{
+        .typeSwiper{
+          width:171px;
+          .image-backdrop{
+            img{
+              width:97%;
+            }
+          }
+        }
+        .swiper-slide{
+          .question{
+            position:relative;
+            margin-top:11%;
+            width:100%;
+            .swiper-input{
+              input{
+                text-align:left;
+              }
+            }
+            .global-input{
+              width:46%;
+              input{
+                text-align:left;
+              }
+            }
+            .fin-btn-white{
+              position:absolute;
+              right:-35%;
+            }
+          }
+        }
+      }
       .swiper-content{
         padding-bottom:12%;
         p{
@@ -131,7 +163,42 @@
               text-align:center;
             }
           }
+          &.multiple{
+            .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal)!important;
+            .PIXEL2EM(30)!important;
+            margin-top:1%!important;
+            margin-bottom:0px;
+            span{
+              &.swiper-input{
+                width:40%;
+                .PIXEL2EM(20)!important;
+              }
+            }
+          }
         }  
+        .topHeader{
+          .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+              .PIXEL2EM(30);
+              margin-top:0px;
+        }
+        &.retirement-content{
+          span{
+            &.swiper-input{
+              width:67%!important;
+              input{
+                padding-left:22px!important;
+              }
+            }
+          }
+          p.question{
+            &:last-child{
+              margin-top:5%;
+            }
+            .highlight{
+              .PIXEL2EM(24);
+            }
+          }
+        }
         &.content-1{
           position:absolute;
           top:48%;
@@ -234,6 +301,77 @@
               margin-bottom:3%;
               .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
               .PIXEL2EM(30);
+            }
+          }
+          &.total-estimation{
+            .estimate{
+              padding-top:3%;
+            }
+            .estimate-cover{
+              position:relative;
+              border-radius:25px;
+              margin-right:4%;
+              padding-top:5%;
+              padding-bottom:5%;
+              border:3px solid #f0f4f7;
+              .image-div{
+                padding-top: 20%;
+                padding-bottom: 20%;
+                width:60%;
+                margin:0 auto;
+                img{
+                  width:84%;
+                }
+              }
+              h3,h4{
+                .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+              }
+              h3{
+                .PIXEL2EM(24);
+                margin-bottom:2px;
+              }
+              h4{
+                .PIXEL2EM(22);
+                margin-top:0px;
+                margin-bottom: 20px;
+              }
+              &:nth-child(3){
+                .image-div{
+                  img{
+                    width:74%!important;
+                  }
+                }
+              }
+              p{
+                .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',#247abc,normal);
+                .PIXEL2EM(18);
+              }
+              .checkbox-cover{
+                text-align:center;
+                position:absolute;
+                left:0px;
+                right:0px;
+                bottom:-19px;
+                label{
+                  opacity:1;
+                  span{
+                    margin-right:0px;
+                    opacity:1;
+                  }
+                }
+              }
+              &.active{
+                background-color:#f0f4f7;
+              }
+              .pigy{
+                width: 16%;
+                position: absolute;
+                top: 8%;
+                right: 8%;
+                img{
+                  width:100%;
+                }
+              }
             }
           }
         }   
