--- a/less/calendar.less
+++ b/less/calendar.less
@@ -111,3 +111,19 @@
 	}
 	
 }
+.retirement{
+	.calender-outer-cover{
+		margin-top:20px;
+		padding-bottom:3%;
+		.calendarHeader{
+			.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+			opacity:0.7;
+            .PIXEL2EM(24);
+            margin-top:0px;
+            margin-bottom:20px;
+		}
+		.calendar-divider{
+			margin-top:30%;
+		}
+	}	
+}
